# first-web-application

./: LICENSE  README.md  app.py  pyproject.toml
Templates/: Dummy2.html  Footer.html  Navigationbars.html  jobCareers.html
